--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title></title>
+	<title>First test page</title>
 </head>
 <body>
-
+<p>Hi all, i`m new file</p>
 </body>
 </html>>
